# basic_partitioning_example

./: CMakeLists.txt  COOtoCSR.cpp  COOtoCSR.h  METISAdjncyFind.cpp  METISAdjncyFind.h  METISWrapper.h  MatrixGen.cpp  MatrixGen.h  MatrixStruct.h  main.cpp
